envoy-gateway/foo-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo
  labels:
    app: foo
    service: foo
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: foo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      serviceAccountName: foo
      containers:
      - name: foo
        image: paulbouwer/hello-kubernetes:1.8
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: foo
spec:
  parentRefs:
    - name: eg
  # hostnames:
  #   - "www.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: foo
          port: 80
          weight: 1
      matches:
        - path:
            type: Exact
            value: /foo
