envoy-gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: bar-route
spec:
  parentRefs:
    - name: envoy-gateway
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: bar
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /bar
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: foo-route
spec:
  parentRefs:
    - name: envoy-gateway
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: foo
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /foo
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: sub-domain-route
spec:
  parentRefs:
    - name: envoy-gateway
  hostnames:
    - "sub-domain.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: sub
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
